--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,15 @@
             <mat-icon>home</mat-icon>
         </button>
         <button class="user" routerLink="/create" mat-button color="accent">Create</button>
+        <button class="user" routerLink="/show" mat-button color="accent">Show Pets</button>
+    </div>
+    <div>
+       
         <button routerLink="/login" mat-button color="accent">LogIn</button>
         <button routerLink="/register" mat-button color="accent">Register</button>
+        <button class="user right" mat-button color="accent">LogOut</button>
     </div>
-    <button class="user right" mat-button color="accent">LogOut</button>
+    
 
 </mat-toolbar>
 
